@startuml

title __VISITOR's Class Diagram__\n

  package taskman {
    package taskman.backend {
      package taskman.backend.visitor {
        class DetailVisitor {
            - details : HashMap<String, String>
            - currentSystemTime : LocalDateTime
            + DetailVisitor()
            + getDetails()
            - createDetailsMap()
            - getCurrentSystemTime()
            + visitProject()
            + visitTask()
            + visitTimeSpan()
            + visitClock()
            + visitUser()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.visitor {
        interface Entity {
            {abstract} + accept()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.visitor {
        class ExportVisitor {
            + visitProject()
            + visitTask()
            + visitTimeSpan()
            + visitClock()
            + visitUser()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.visitor {
        interface Visitor {
            {abstract} + visitProject()
            {abstract} + visitTask()
            {abstract} + visitTimeSpan()
            {abstract} + visitClock()
            {abstract} + visitUser()
        }
      }
    }
  }
  

  DetailVisitor -up-|> Visitor
  ExportVisitor -up-|> Visitor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
